--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
     // Firebase Authentication
     compile 'com.google.firebase:firebase-auth:11.6.0'
     // Google Sign In SDK (only required for Google Sign In)
